# -xrtslam-metrics

./: .gitignore  .pylintrc  README.md  batch.py  completion.py  features.py  jsondiff.py  pyproject.toml  recall.py  requirements.txt  run.py  timing.py  tracking.py  tracking_ape.py  utils.py
docs/: _config.yml
docs/_posts/: 2024-05-11-ablation-study.markdown  2024-05-11-welcome-to-jekyll.markdown
docs/assets/: main.scss
euroc/: euroc_ops.py  executor.py  hilti_rosbag_to_euroc.py
test/data/: targets.tar.xz
test/data/basalt-deterministic-ablation/: settings.cfg
test/data/basalt-deterministic-ablation/_results/: all.md  euroc.md  monado.md  msdmg.md  tumvi.md
test/data/basalt-deterministic-ablation/curr_mgt_ovl_tmc_imu_isr_rec/: run.sh
test/data/basalt-deterministic-ablation/curr_mgt_ovl_tmc_imu_isr_rec_cov/: run.sh
test/data/basalt-vs-systems/: run-all.sh  settings.cfg
test/data/basalt-vs-systems/ORB-SLAM3/: run.sh
test/data/basalt-vs-systems/_basalt/: run.sh
test/data/basalt-vs-systems/_calibs/: msdmg.json  msdmg_2cams.json
test/data/basalt-vs-systems/_results/: euroc.md  msdmi.md  msdmo.md
test/data/basalt-vs-systems/basalt/: run.sh
test/data/basalt-vs-systems/basalt_with_map/: run.sh
test/data/persistent-map-deterministic-runs/: results.md  results_original_vs_recall.md  settings.cfg
test/data/persistent-map-deterministic-runs/basalt/: run.sh
test/data/persistent-map-runs/: results.md  results_original_vs_recall.md  settings.cfg
test/data/runs/Basalt/: run.sh
test/data/targets/: README.md
utils/: hilti_rosbag_to_euroc.py
(+3458 files in other folders)
